fix: filesystem scrollbar now matches console

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -121,6 +121,22 @@
     user-select: none;
   }
 
+  ::-webkit-scrollbar {
+    transition: all .5s;
+    width: 5px;
+    height: 1px;
+    z-index: 10;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #b3ada7;
+  }
+
+
   // gcode thumbnails in the file list
   .file-icon-thumb {
     align-items: center;
